// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header correctly 1`] = `
<div
  className="header"
>
  <div
    className="container"
  >
    <h1
      className="header__title"
    >
      new Title
    </h1>
    <h2
      className="header__subtitle"
    >
      new subtitle
    </h2>
  </div>
</div>
`;

exports[`should render Header with default title correctly 1`] = `
<div
  className="header"
>
  <div
    className="container"
  >
    <h1
      className="header__title"
    >
      Indecision
    </h1>
    <h2
      className="header__subtitle"
    >
      new subtitle
    </h2>
  </div>
</div>
`;
